feat: mediator coordination protocol
